# sdl3-wrap

./: CMakeLists.txt
GBAdventure/: CMakeLists.txt
GBAdventure/include/: GBAdventure.hpp  StateManager.hpp  window.hpp
GBAdventure/include/graphics/: colors.hpp  font.hpp
GBAdventure/include/objects/: Container.hpp  DialogFrame.hpp  Menu.hpp  Object.hpp
GBAdventure/include/states/: BaseState.hpp  Titlescreen.hpp
GBAdventure/source/: GBAdventure.cpp  main.cpp
GBAdventure/source/objects/: DialogFrame.cpp  Menu.cpp
GBAdventure/source/states/: Titlescreen.cpp
GBTiler/: CMakeLists.txt
GBTiler/include/: GBTiler.hpp  window.hpp
GBTiler/include/map/: Layer.hpp  Tile.hpp  Tileset.hpp  tilesize.hpp
GBTiler/include/ui/: Element.hpp  MapEditor.hpp  Menu.hpp  MenuBar.hpp  MenuOption.hpp  Text.hpp  colors.hpp  font.hpp  menudims.hpp
GBTiler/include/util/: filename.hpp  is_within.hpp
GBTiler/source/: GBTiler.cpp  main.cpp
GBTiler/source/map/: Layer.cpp  Tile.cpp  Tileset.cpp
GBTiler/source/ui/: MapEditor.cpp  Menu.cpp  MenuBar.cpp  MenuOption.cpp
GBTiler/source/util/: filename.cpp
lib/: CMakeLists.txt
lib/include/: ButtonState.hpp  CoreComponent.hpp  Font.hpp  FrameLimiter.hpp  Freetype.hpp  Gamepad.hpp  GamepadManager.hpp  GamepadScanner.hpp  Input.hpp  Keyboard.hpp  Mouse.hpp  OptionalReference.hpp  Renderer.hpp  ResourceManager.hpp  SDL3.hpp  Surface.hpp  Texture.hpp  Timer.hpp  Window.hpp  sdl3.hpp
lib/include/sdl3/: CoreComponent.hpp  Font.hpp  Freetype.hpp  Input.hpp  OptionalReference.hpp  Renderer.hpp  SDL3.hpp  Surface.hpp  Texture.hpp  Window.hpp
lib/source/: Font.cpp  Gamepad.cpp  GamepadManager.cpp  GamepadScanner.cpp  Input.cpp  Keyboard.cpp  Mouse.cpp  Renderer.cpp  SDL3.cpp  Texture.cpp  Timer.cpp  Window.cpp  sdl3.cpp
test/: CMakeLists.txt
test/include/: Bullet.hpp  Enemy.hpp  Game.hpp  Input.hpp  Object.hpp  Player.hpp  Star.hpp  TestGame.hpp  screen.hpp
test/source/: Bullet.cpp  Enemy.cpp  Game.cpp  Player.cpp  Star.cpp  TestGame.cpp  main.cpp
testB/: CMakeLists.txt
testB/include/: WindowTest.hpp
testB/source/: WindowTest.cpp  main.cpp
